# AGENT_VF_LangGraph

./: .env.example  .gitignore  README.md  Structure de Répertoires  check_fastembed_models.py  output_pytest_fixed_t1_list_dict.txt  pyproject.toml  run_pipeline_n3_n5_n6.py
.github/workflows/: python-ci.yml
data/input/school_guidelines/: Mémoire de Mission Professionnelle – Digi5.txt
src/: config.py  graph_assembler.py  persistence.py  state.py
src/nodes/: n0_initial_setup.py  n1_guideline_ingestor.py  n2_journal_ingestor_anonymizer.py  n3_thesis_outline_planner.py  n4_section_processor_router.py  n5_context_retrieval.py  n6_section_drafting.py  n8_human_review_hitl_node.py
src/tools/: t1_journal_context_retriever.py
tests/: test_initial_setup.py  test_persistence.py  test_t1_journal_context_retriever.py
tests/nodes/: test_n0_initial_setup.py  test_n1_guideline_ingestor.py  test_n2_journal_ingestor_anonymizer.py  test_n2_rag_parts.py  test_n2_text_sanitization.py  test_n3_thesis_outline_planner.py  test_n4_section_processor_router.py  test_n5_context_retrieval.py  test_n6_section_drafting.py  test_n8_human_review_hitl_node.py
tests/tools/: test_t1_journal_context_retriever.py
